# JordanaBilling

./: .cbmignore  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: example.env
docs/: ALIAS_LEARNING.md  BUSINESS_PROFILE.md  CALENDAR_ENTRY_STANDARD.md  CALENDAR_INTEGRATION.md  CALENDAR_SHORTHAND_RULES.md  CLIENTS_AND_ACCOUNTS.md  CLIENT_CODES.md  CSV_EXPORTS.md  CURRENT_IMPLEMENTATION_STATUS_AND_HANDOFF.md  DATA_MODEL.md  DEMO_DATA.md  DIAGNOSTICS.md  FRESH_INSTALL.md  GITHUB_AND_HANDOFF.md  HANDOFF_TO_JORDANA_MAC.md  IDENTITY_CORRECTION_AND_MERGING.md  INVOICE_LIFECYCLE.md  INVOICE_MODEL.md  INVOICE_TEMPLATE.md  PEOPLE.md  PIPELINE.md  PRIVATE_DATA_TRANSFER.md  PRODUCTION_PACKAGING.md  RATE_RULES.md  RELATIONSHIP_MODEL.md  REVIEW_WORKFLOW.md  SCHEMA_AUDIT.md  SECTION_LEVEL_SAVES.md  SERVICE_CATALOG.md  TEST8_JORDANA_MAC_INSTALL_INCIDENT.md  TEST_MAC_ACCEPTANCE.md  TEST_RELEASE_NOTES.md  UI_SPEC.md  WRITE_ENDPOINT_CONTRACTS.md
launchd/: com.jordana.billing.sync.plist
scripts/: TRANSFER_MANIFEST_TEMPLATE.txt  backup_db.sh  bootstrap.sh  build_app_icon.sh  build_launcher.sh  build_release.sh  build_setup_wizard.sh  configure_apps_script.py  create_demo_database.sh  create_private_config.sh  full_sync.sh  generate_calendar_shortcut_specs.py  git_safety_check.sh  health_check.sh  install_release.sh  install_sync_launch_agent.sh  launch_installed_app.sh  launcher_common.sh  privacy_check.sh  reset_test_db.sh  run_acceptance_test.sh  setup_jordana_mac.sh  sign_and_notarize_release.sh  start_jordana.sh  stop_jordana.sh  update_release.sh  (+5 more)
(+149 files in other folders)
