[project]
name = "jordana-invoice"
version = "0.1.0.post18"
description = "Local-first calendar snapshot importer and review workflow for Jordana billing."
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10,<13",
  "pypdf>=6,<7",
  "reportlab>=4.2,<5",
]

[project.optional-dependencies]
test = []

[project.scripts]
jordana-invoice = "jordana_invoice.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.setuptools.package-data]
jordana_invoice = ["static/*", "static/**/*"]
